--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,29 @@
-image: python:latest
+image: debian:latest
+
+services:
+  - postgres
+  
+before_script:
+  - apt update
+  - apt list --upgradable
+  - apt upgrade -yqq
+  - apt-get install python3 python3-venv python3-dev libpq-dev build-essential -yqq
+  
+after_script:
+  - ls -a
+  
+stages:
+  - build 
+  - test 
+  - deploy
 
 flaskjob:
-  test:
-    script:
-    - apt-get update
-    - apt-get install python3 python3-venv python3-dev libpq-dev build-essential -yqq
+  stage: build
+  script:
     - python3 -m venv venv
     - source venv/bin/activate
     - pip3 install --upgrade pip
-    - pip3 install -r requirements.txt
+    - pip3 install -r flask/requirements.txt
+
+
 
